add save next steps
