# src/app/services/model/models.ts
@@ -7,9 +7,11 @@ export * from './nextStepWithParameterRelationDto';
 export * from './outputArgumentDto';
 export * from './outputType';
 export * from './planDto';
+export * from './planExportDto';
 export * from './planRunDto';
 export * from './planRunInstructionDto';
 export * from './requestContentType';
 export * from './scriptStepDto';
+export * from './simpleNextStepDto';
 export * from './stepDto';
 export * from './stepParameterRelationDto';
