# src/app/services/model/planExportDto.ts
@@ -1,0 +1,30 @@
+/**
+ * ptt-backend API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0-SNAPSHOT
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { ScriptStepDto } from './scriptStepDto';
+import { HttpStepDto } from './httpStepDto';
+import { PlanDto } from './planDto';
+import { StepParameterRelationDto } from './stepParameterRelationDto';
+import { OutputArgumentDto } from './outputArgumentDto';
+import { SimpleNextStepDto } from './simpleNextStepDto';
+import { InputArgumentDto } from './inputArgumentDto';
+
+
+export interface PlanExportDto { 
+    plan?: PlanDto;
+    httpSteps?: Array<HttpStepDto>;
+    scriptSteps?: Array<ScriptStepDto>;
+    inputs?: Array<InputArgumentDto>;
+    outputs?: Array<OutputArgumentDto>;
+    relations?: Array<StepParameterRelationDto>;
+    nextSteps?: Array<SimpleNextStepDto>;
+}
+
